--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title></title>
 </head>
+
 <body>
     <div class="container-fluid">
 
@@ -17,63 +20,67 @@
                 <!-- Кнопки -->
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                      <button class="nav-link active" id="nav-authors-tab" data-bs-toggle="tab" data-bs-target="#nav-authors" type="button" role="tab" aria-controls="nav-authors" aria-selected="true">Авторы</button>
-                      <button class="nav-link" id="nav-books-tab" data-bs-toggle="tab" data-bs-target="#nav-books" type="button" role="tab" aria-controls="nav-books" aria-selected="false">Жанры</button>
+                        <button class="nav-link active" id="nav-authors-tab" data-bs-toggle="tab"
+                            data-bs-target="#nav-authors" type="button" role="tab" aria-controls="nav-authors"
+                            aria-selected="true">Авторы</button>
+                        <button class="nav-link" id="nav-books-tab" data-bs-toggle="tab" data-bs-target="#nav-books"
+                            type="button" role="tab" aria-controls="nav-books" aria-selected="false">Жанры</button>
                     </div>
                 </nav>
-                  <!-- Контент кнопок -->
-                  <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="nav-authors" role="tabpanel" aria-labelledby="nav-authors-tab">
+                <!-- Контент кнопок -->
+                <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade show active" id="nav-authors" role="tabpanel"
+                        aria-labelledby="nav-authors-tab">
                         <table class="col-9">
                             <thead>
-                              <tr>
-                                <th scope="col">Авторы</th>
-                                <th scope="col">Книги в базе</th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
-                              </tr>
+                                <tr>
+                                    <th scope="col">Авторы</th>
+                                    <th scope="col">Книги в базе</th>
+                                    <th scope="col"></th>
+                                    <th scope="col"></th>
+                                    <th scope="col"></th>
+                                </tr>
                             </thead>
                             <tbody>
-                              <tr>
-                                <td>Пушкин А.С.</td>
-                                <td>5</td>
-                                <td>
-                                    <a href="#">Редактировать</a>
-                                </td>
-                                <td>
-                                    <a href="#">Удалить</a>
-                                </td>
-                                <td>
-                                    <a href="#">Детали</a>
-                                </td>
-                              </tr>
-                              <tr>
-                                <td>Тургенев И.С.</td>
-                                <td>1</td>
-                                <td>
-                                    <a href="#">Редактировать</a>
-                                </td>
-                                <td>
-                                    <a href="#">Удалить</a>
-                                </td>
-                                <td>
-                                    <a href="#">Детали</a>
-                                </td>
-                              </tr>
-                              <tr>
-                                <td>Шевченко Т Г.</td>
-                                <td>2</td>
-                                <td>
-                                    <a href="#">Редактировать</a>
-                                </td>
-                                <td>
-                                    <a href="#">Удалить</a>
-                                </td>
-                                <td>
-                                    <a href="#">Детали</a>
-                                </td>
-                              </tr>
+                                <tr>
+                                    <td>Пушкин А.С.</td>
+                                    <td>5</td>
+                                    <td>
+                                        <a href="#">Редактировать</a>
+                                    </td>
+                                    <td>
+                                        <a href="#">Удалить</a>
+                                    </td>
+                                    <td>
+                                        <a href="#">Детали</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Тургенев И.С.</td>
+                                    <td>1</td>
+                                    <td>
+                                        <a href="#">Редактировать</a>
+                                    </td>
+                                    <td>
+                                        <a href="#">Удалить</a>
+                                    </td>
+                                    <td>
+                                        <a href="#">Детали</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Шевченко Т Г.</td>
+                                    <td>2</td>
+                                    <td>
+                                        <a href="#">Редактировать</a>
+                                    </td>
+                                    <td>
+                                        <a href="#">Удалить</a>
+                                    </td>
+                                    <td>
+                                        <a href="#">Детали</a>
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
                         <div class="btn-author-done mt-4">
@@ -84,115 +91,137 @@
                         <table id="genreTable" class="col-10">
                             <thead>
                                 <tr>
-                                  <th scope="col">Название жанра</th>
-                                  <th scope="col">Редактировать</th>
-                                  <th scope="col">Удалить</th>
+                                    <th scope="col">Название жанра</th>
+                                    <th scope="col">Редактировать</th>
+                                    <th scope="col">Удалить</th>
                                 </tr>
-                              </thead>
-                              <tbody>
+                            </thead>
+                            <tbody>
 
-                              </tbody>
+                            </tbody>
                         </table>
-                        <div class="col-sm-4">
-                            <input type="text" id="newGenreInput" class="form-control">
-                          </div>
                         <div class="btn-author-done mt-4">
-                            <button id="addGenreButton" type="button" class="btn-author-done btn btn-light">Добавить жанр</button>
+                            <button id="addGenreButton" type="button" class="btn-author-done btn btn-light" onclick="click_addGenre()">Добавить жанр</button>
                         </div>
                     </div>
-                  </div>
-                  <!-- Конец главной кнопки переключателя -->
+                </div>
+                <!-- Конец главной кнопки переключателя -->
 
                 <div class="row g-3 align-items-center mb-2">
                     <div class="col-sm-3">
-                      <label for="lname" class="col-form-label ">Фамилия</label>
+                        <label for="lname" class="col-form-label ">Фамилия</label>
                     </div>
                     <div class="col-sm-6">
-                      <input type="text" id="lname" class="form-control ">
+                        <input type="text" id="lname" class="form-control ">
                     </div>
                 </div>
 
                 <div class="row g-3 align-items-center mb-2">
                     <div class="col-sm-3">
-                      <label for="fname" class="col-form-label">Имя</label>
+                        <label for="fname" class="col-form-label">Имя</label>
                     </div>
                     <div class="col-sm-6">
-                      <input type="text" id="fname" class="form-control ">
+                        <input type="text" id="fname" class="form-control ">
                     </div>
                 </div>
 
                 <div class="row g-3 align-items-center mb-2">
                     <div class="col-sm-3">
-                      <label for="surname" class="col-form-label">Отчество</label>
+                        <label for="surname" class="col-form-label">Отчество</label>
                     </div>
                     <div class="col-sm-6">
-                      <input type="text" id="surname" class="form-control ">
+                        <input type="text" id="surname" class="form-control ">
                     </div>
                 </div>
 
                 <div class="row g-3 align-items-center mb-2">
                     <div class="col-sm-3">
-                      <label for="surname" class="col-form-label">Дата рождения</label>
+                        <label for="surname" class="col-form-label">Дата рождения</label>
                     </div>
                     <div class="col-sm-6">
-                      <input type="date" id="surname" class="form-control ">
+                        <input type="date" id="surname" class="form-control ">
                     </div>
                 </div>
             </div>
 
-                <!-- Форма книг -->
-                <div class="block-books col-sm-9">
-                    <div class="catalog-books">
-                        <p class="catalog-books d-flex justify-content-between">Книги:</p>
-                        <div class="frame-book d-flex justify-content-between align-self-center border border-secondary p-1 "> 
-                            <!-- <div> Заглушка информация о книге -->
-                            <div class="d-flex align-items-center">Комедия 220 стр.</div>
-                                <div>
-                                    <button type="button" class="btn btn-link p-0">редактировать</button><br>
-                                    <button type="button" class="btn btn-link p-0">удалить</button>
-                                </div>
+            <!-- Форма книг -->
+            <div class="block-books col-sm-9">
+                <div class="catalog-books">
+                    <p class="catalog-books d-flex justify-content-between">Книги:</p>
+                    <div
+                        class="frame-book d-flex justify-content-between align-self-center border border-secondary p-1 ">
+                        <!-- <div> Заглушка информация о книге -->
+                        <div class="d-flex align-items-center">Комедия 220 стр.</div>
+                        <div>
+                            <button type="button" class="btn btn-link p-0">редактировать</button><br>
+                            <button type="button" class="btn btn-link p-0">удалить</button>
                         </div>
-                    </div> 
-
-                   <!-- Кнопка добавить форму книг -->
-                    <div class="btn-author-done mt-4">
-                        <button type="button" class="btn-author-done btn btn-light">Добавить книгу</button>
-                    </div>
-
-                    <div class="row g-3 align-items-center mb-2">
-                        <div class="col-sm-2">
-                          <label for="book-title" class="col-form-label">Название</label>
-                        </div>
-                        <div class="col-sm-4">
-                          <input type="text" id="book-title" class="form-control ">
-                        </div>
-                    </div>
-
-                    <div class="row g-3 align-items-center mb-2">
-                        <div class="col-sm-2">
-                          <label for="number-pages" class="col-form-label ">Количество страниц</label>
-                        </div>
-                        <div class="col-sm-4">
-                          <input type="number" id="number-pages" class="form-control">
-                        </div>
-                    </div>
-
-                    <div id="genreList">
-                        <label>Жанр: </label>
-                        <select class="form-select" aria-label="Default select example">
-
-                        </select>
                     </div>
                 </div>
+
+                <!-- Кнопка добавить форму книг -->
+                <div class="btn-author-done mt-4">
+                    <button type="button" class="btn-author-done btn btn-light">Добавить книгу</button>
+                </div>
+
+                <div class="row g-3 align-items-center mb-2">
+                    <div class="col-sm-2">
+                        <label for="book-title" class="col-form-label">Название</label>
+                    </div>
+                    <div class="col-sm-4">
+                        <input type="text" id="book-title" class="form-control ">
+                    </div>
+                </div>
+
+                <div class="row g-3 align-items-center mb-2">
+                    <div class="col-sm-2">
+                        <label for="number-pages" class="col-form-label ">Количество страниц</label>
+                    </div>
+                    <div class="col-sm-4">
+                        <input type="number" id="number-pages" class="form-control">
+                    </div>
+                </div>
+
+                <div id="genreList">
+                    <label>Жанр: </label>
+                    <select class="form-select" aria-label="Default select example">
+
+                    </select>
+                </div>
             </div>
-        </div> 
+        </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!-- Модальное окно редактирования жанра -->
+    <div class="modal fade" id="genreModal" tabindex="-1" aria-labelledby="genreModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="genreModalLabel">Редактировать жанр</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="col-sm-12">
+                        <input type="text" id="genreModalNameInput" class="form-control">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    <button type="button" class="btn btn-primary" id="saveGenreButton">Сохранить</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+        integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
     <script src="js/genre.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
