--- a/index.html
+++ b/index.html
@@ -188,7 +188,30 @@
             </div>
         </div>
     </div>
+
+<!-- ----------------------------------------------------------------------------- -->
+<div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content table">
+            <table id="detailsAuthorModal">
+                <tbody></tbody>
+            </table>
+
+            <table id="detailsModal">
+                <tbody>
+                </tbody>
+            </table>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+            </div>
+        </div>
+    </div>
 </div>
+<!-- ---------------------------------------------------------------------------------------------------------- -->
+
+</div>
+
+
 
     <!-- ссылки  -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
