--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <label for="surname" class="col-form-label">Отчество</label>
                     </div>
                     <div class="col-sm-6">
-                        <input type="text" id="authorModalSureNameInput" class="form-control ">
+                        <input type="text" id="authorModalSurNameInput" class="form-control ">
                     </div>
                 </div>
 
